# yoink

./: LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
design/: README.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  commands.rs  error.rs  knownhosts.rs  lib.rs  main.rs  proxy.rs  session.rs
src-tauri/src/protocols/: ftp.rs  mod.rs  sftp.rs  traits.rs
src-tauri/src/transfer/: mod.rs  queue.rs  worker.rs
src/components/: BookmarksSidebar.tsx  ConnectionDialog.tsx  DropBanner.tsx  DropOverlay.tsx  FileInfoDialog.tsx  FileTable.tsx  LocalPane.tsx  PathBar.tsx  PreferencesDialog.tsx  RemotePane.tsx  TabBar.tsx  TitleBar.tsx  Toaster.tsx  TofuPromptDialog.tsx  Toolbar.tsx  TransferHistoryPanel.tsx  TransferQueuePanel.tsx  icons.tsx
src/hooks/: useAutoReconnect.ts  useDragDrop.ts  useFullscreen.ts  useMenuEvents.ts  usePaneShortcuts.ts  useTransferNotifications.ts
src/lib/: api.ts  contextMenu.ts  format.ts  toast.ts
src/store/: bookmarks.ts  dragState.ts  pendingTofu.ts  sessions.ts  viewPrefs.ts
