[package]
name = "yoink"
version = "0.1.0"
description = "Native-feel cross-platform FTP/SFTP client"
authors = ["square-key-labs"]
license = "MIT"
repository = "https://github.com/square-key-labs/yoink"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yoink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
russh = "0.60.0"
russh-sftp = "2.1.1"
suppaftp = { version = "8", features = ["tokio"] }
zeroize = { version = "1.8.2", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
uuid = { version = "1.23.1", features = ["v4"] }
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }
window-vibrancy = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }

